--- a/kitsunebi_default.conf
+++ b/kitsunebi_default.conf
@@ -47,6 +47,8 @@ PORT,123,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
+DOMAIN-SUFFIX,toutiaocloud.net,DIRECT
+DOMAIN-SUFFIX,bytecdn.cn,DIRECT
 
 // xigua
 DOMAIN-SUFFIX,ixigua.com,DIRECT
