--- a/kitsunebi_default.conf
+++ b/kitsunebi_default.conf
@@ -165,6 +165,8 @@ DOMAIN-SUFFIX,medium.com,PROXY
 
 // others
 DOMAIN-SUFFIX,fivecdm.com,PROXY
+DOMAIN-SUFFIX,phncdn.com,PROXY
+DOMAIN-SUFFIX,pornhub.com,PROXY
 
 
 // ==== final ====
